CAR-5266: Remove all V7 code and dependencies. Update version to 14.0.